<resources>
    <string name="app_name">Notes</string>
    <string name="hint_search">Search notes</string>
    <string name="cd_add_note">Add note</string>
    <string name="title_edit_note">Edit Note</string>
    <string name="hint_title">Title</string>
    <string name="hint_content">Write your note…</string>
    <string name="hint_tags">Tags (comma-separated)</string>
    <string name="label_bold">Bold</string>
    <string name="label_italic">Italic</string>
    <string name="action_search">Search</string>
    <string name="action_toggle_theme">Toggle Theme</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="error_title_required">Title is required</string>
</resources>
